syntax = 'proto3';

package auth;

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {}
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  int32 status = 1;
  repeated string errors = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int32 status = 1;
  repeated string errors = 2;
  string token = 3;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  int32 status = 1;
  repeated string errors = 2;
  int32 userId = 3;
}


